# BigBrian

./: .gitignore  BackPropTrainer.cs  BigBrian.sln  CMakeLists.txt  CSVFile.cs  LICENSE.md  NaturalSelectionTrainer.cs  NetworkData.json  NeuralNet.cs  OmegaTrainer.cs  Program.cs  README.md
BigBrian/: Data.csv  OmegaTrainer.cs  Plotter.py
BigBrianTester/: BigBrianTester.csproj  Data.csv  Program.cs
BigBrianTester/Networks/: NetworkData.json
brian/: CMakeLists.txt
brian/include/: NN.h
brian/include/brian/: NN.h  Population.h  prelude.h
brian/include/brian/math/: Matrix.h  Types.h
brian/include/brian/util/: DataParser.h  data_parser.h  util.h
brian/include/math/: Matrix.h  Types.h
brian/src/: NN.cpp  Population.cpp  main.cpp
brian/src/math/: Matrix.cpp
brian/src/nn/: ActivationFuncs.cpp  Layer.cpp  Network.cpp  activation_funcs.cpp
brian/src/util/: DataParser.cpp  data_parser.cpp
logs/: 2021-03-31_22-12-46Z.csv  2021-03-31_22-15-02Z.csv  2021-03-31_22-15-24Z.csv  2021-03-31_22-15-38Z.csv  2021-03-31_22-17-05Z.csv  2021-03-31_22-17-25Z.csv  2021-03-31_22-24-07Z.csv  2021-03-31_22-24-16Z.csv  2021-03-31_22-25-28Z.csv  2021-03-31_22-45-17Z.csv
test/include/: util.h
test/src/: MatrixTest.cpp  SampleTest.cpp  common.cpp  sample.cpp  util.cpp
test/src/math/matrix/: add.cpp  add_reuse.cpp  init.cpp  mult.cpp  mult_reuse.cpp  mutate.cpp  str.cpp
test/src/network/: backpropagation.cpp  feedforward.cpp  init.cpp  score.cpp
test/src/population/: train.cpp
test/src/util/: parser_ds_csv.cpp
